<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2018 Clover Network, Inc.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~
 ~ You may obtain a copy of the License at
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:text="@string/cardholder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/order_table_text_size"
        android:textStyle="bold"
        android:id="@+id/CardsNameColumn"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/card_first_six_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/table_primary_text_size"
            android:id="@+id/CardsFirst6Column"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_middle_placeholder"
            android:id="@+id/CardsXXXXColumn"
            android:textSize="@dimen/table_secondary_text_size"
            android:textColor="@color/secondary_table_text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_last_four_placeholder"
            android:id="@+id/CardsLast4Column"
            android:textSize="@dimen/table_primary_text_size"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="@dimen/order_table_text_size"
            android:text="@string/exp"/>

        <TextView
            android:text="@string/card_exp_date_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/order_table_text_size"
            android:id="@+id/CardsExpColumn" />
    </LinearLayout>
</LinearLayout>