<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2018 Clover Network, Inc.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~
 ~ You may obtain a copy of the License at
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="@color/white"
    android:gravity="center_horizontal">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:textSize="24sp"
      android:text="@string/recovery_options"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      android:layout_marginTop="10dp">
    <Button
        android:id="@+id/ResetDeviceButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_padding"
        android:text="@string/reset"
        android:onClick="onResetDeviceClick"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/PaymentByIdButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_padding"
        android:text="@string/payment_by_id"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/PendingPaymentsButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_padding"
        android:text="@string/pending_payments"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/DeviceStatusButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_padding"
        android:text="@string/device_status"
        android:onClick="onGetDeviceStatusClick"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/DeviceStatusResendButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_padding"
        android:text="@string/device_status_resend"
        android:onClick="onGetDeviceStatusCBClick"
        android:layout_marginBottom="10dp"/>
  </LinearLayout>
</LinearLayout>