<!--
  ~ Copyright (C) 2018 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.clover.example.OrdersFragment">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/orders"
          android:textSize="18sp"
          android:padding="3dp"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@color/clover_green"/>
      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:fillViewport="true"
          android:layout_weight="1">
      <ListView
          android:layout_width="fill_parent"
          android:layout_height="match_parent"
          android:id="@+id/OrdersListView"
          android:layout_marginBottom="5dp">
      </ListView>
      </ScrollView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:id="@+id/itemsBox"
          android:layout_marginRight="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_items"
            android:layout_weight="0"
            android:textSize="18sp"
            android:padding="3dp"/>
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/clover_green"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ItemsGridView"
            android:isScrollContainer="false"
            android:layout_alignParentStart="true" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/paymentsBox"
          android:orientation="vertical"
          android:layout_marginRight="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:layout_weight="0"
            android:textSize="18sp"
            android:padding="3dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/clover_green"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PaymentsGridView"
            android:isScrollContainer="false"
            android:layout_alignParentEnd="true"/>
        <Button
            android:id="@+id/OrdersGoToRegister"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_padding"
            android:layout_gravity="right|bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/open_in_register"/>
      </LinearLayout>
    </LinearLayout>
    </ScrollView>
  </LinearLayout>
</RelativeLayout>